# winasio

./: .clang-format  .gitignore  CMakeLists.txt  Development.md  README.md  to_do.txt  vcpkg.json
.github/workflows/: build.yaml  format.yaml
cmake/: clang-format.cmake
docs/: Internals.md
examples/: CMakeLists.txt  echoclient.cpp  echoserver.cpp  echoserver.hpp  echoserver_coro.cpp  echoserver_movable.hpp  echoserver_session.hpp
examples/http/: beast_client.cpp  beast_server.cpp
examples/named_pipe/: CMakeLists.txt  echoclient.cpp  echoserver.cpp  echoserver.hpp  echoserver_coro.cpp  echoserver_movable.cpp  echoserver_movable.hpp  echoserver_session.hpp
examples/named_pipe/http/: beast_client.cpp  beast_server.cpp
include/boost/winasio/http/: basic_http_controller.hpp  basic_http_handle.hpp  basic_http_queue.hpp  basic_http_queue_handle.hpp  basic_http_request_context.hpp  basic_http_url.hpp  convert.hpp  http.hpp  http_asio.hpp  http_initializer.hpp  http_major_version.hpp  http_url_handler.hpp  temp.hpp
include/boost/winasio/http/detail/: url_dispatch_tree.h
include/boost/winasio/named_pipe/: named_pipe.hpp  named_pipe_acceptor.hpp  named_pipe_client_details.hpp  named_pipe_protocol.hpp  named_pipe_server_details.hpp
include/boost/winasio/winhttp/: client.hpp  temp.hpp  winhttp.hpp  winhttp_asio.hpp  winhttp_stream.hpp
include/winasio/: named_pipe.hpp  named_pipe_acceptor.hpp  named_pipe_protocol.hpp  named_pipe_server_details.hpp
include/winasio/http/: basic_http_handle.hpp  convert.hpp  http.hpp  temp.hpp
tests/: CMakeLists.txt  http_server_test.cpp  named_pipe_test.cpp  test_client.hpp
tests/http/: CMakeLists.txt  beast_client.hpp  http_server_test.cpp
tests/named_pipe/: CMakeLists.txt  named_pipe_test.cpp  test_client.hpp
tests/winhttp/: CMakeLists.txt  beast_test_server.hpp  winhttp2_test.cpp  winhttp_infra_test.cpp  winhttp_request_test.cpp  winhttp_test.cpp
